--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,18 +20,19 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
     //UI dependencies
     compile 'com.android.support:appcompat-v7:22.2.1'
     compile 'com.android.support:recyclerview-v7:22.2.1'
     compile 'com.android.support:cardview-v7:22.2.1'
-
+    compile('com.mikepenz:materialdrawer:3.1.2@aar') {
+        transitive = true
+    }
     //Networking
     compile 'com.squareup.retrofit:retrofit:1.9.0'
-
     //Database
     compile 'se.emilsjolander:sprinkles:1.3.1'
-
     //Logging
     compile 'com.jakewharton.timber:timber:3.1.0'
+    //Image processing
+    compile 'com.squareup.picasso:picasso:2.5.2'
 }
